#mant0000079: [PRO-001] Age min à 16 ans

--- a/src/app/components/i18n/user/en.json
+++ b/src/app/components/i18n/user/en.json
@@ -44,6 +44,7 @@
         "gender": "Gender is mandatory",
         "birthDate": "Birthdate is mandatory",
         "phone": "Phone number is mandatory",
+        "ageCheck": "you must be at least 16 years old"
       }
     }
   },
