--- a/src/app/components/i18n/user/fr.json
+++ b/src/app/components/i18n/user/fr.json
@@ -64,7 +64,8 @@
         "firstname": "Le prénom est obligatoire",
         "gender": "Le genre est obligatoire",
         "birthDate": "La date de naissance est obligatoire",
-        "phone": "Le numéro de téléphone est obligatoire"
+        "phone": "Le numéro de téléphone est obligatoire",
+        "ageCheck": "Vous devez avoir au moins 16 ans"
       }
     }
   },
