Change Sandbox + Bug update event

--- a/src/app/components/i18n/commons/en.json
+++ b/src/app/components/i18n/commons/en.json
@@ -54,7 +54,8 @@
             "next" : "Next",
             "previous" : "Previous",
             "filter":"Filter",
-            "agree" : "I agree"
+            "agree" : "I agree",
+            "changeSB" : "Change"
         },
         "settings" : {
             "activity": {
