--- a/src/app/components/i18n/user/fr.json
+++ b/src/app/components/i18n/user/fr.json
@@ -81,7 +81,8 @@
         "birthDate": "La date de naissance est obligatoire",
         "phone": "Le numéro de téléphone est obligatoire",
         "ageCheck": "Vous devez avoir au moins 16 ans"
-      }
+      },
+      "success": "Votre profil a été mis à jour"
     }
   },
   "profilePwdPage": {
