--- a/src/app/components/i18n/user/fr.json
+++ b/src/app/components/i18n/user/fr.json
@@ -53,7 +53,12 @@
       "price": "Prix",
       "activity": "Activité",
       "pay": "Souscrire",
-      "cardNumber": "N° de carte"
+      "cardNumber": "N° de carte",
+      "pay-modal" : {
+        "title" : "Attention",
+        "content" : "Vous êtes sur le point de souscrire à une offre Qaobee, notre partenaire de paiement vous demandra votre carte de crédit",
+        "error" : "Une erreur s'est produite durant la transaction."
+      }
     }
   },
   "profilePage": {
