#mant0000089: Bouton "retour" en période d'essaie sur la gestion de l'abonnement

--- a/src/app/components/i18n/menu/en.json
+++ b/src/app/components/i18n/menu/en.json
@@ -24,6 +24,9 @@
     "trial": {
       "title": "You are in trial period.",
       "content": "You can subscribe anytime by <a href=\"/#/private/billing/pay/0\" >clikcing here</a>. This period expires in <b>{{count}}</b> day(s)."
+    },
+    "trial-ended": {
+      "content": "Your trial period has ended, please subscribe <a href=\"/#/private/billing/pay/0\" >here</a>."
     }
   },
   "navbar": {
