--- a/src/app/components/i18n/public/fr.json
+++ b/src/app/components/i18n/public/fr.json
@@ -1,6 +1,6 @@
 {
   "landing": {
-    "main-title": "Captez et améliorez les perfs de vos joueurs",
+    "main-title": "Captez et améliorez les performances de vos joueurs",
     "sub-title": "Qu'attendez-vous ?",
     "manual-btn": "Mode d'emploi",
     "connect": "Restons connectés",
@@ -74,43 +74,25 @@
   },
   "pricing": {
     "title": "Notre offre",
-    "desc": "Qaobee s'adresse aux entraîneurs et aux clubs<span style=\"vertical-align: super; font-size: 50%;\">*</span> de handball",
+    "desc": "",
     "subscribe-btn": "Souscrire",
     "soon-btn": "Prochainement",
     "team-subscribe": "(*) Vous êtes un club et vous souhaitez souscrire à Qaobee pour vos entraîneurs, <a href=\"mailto:contact@qaobee.com\">contactez nous</a>",
     "trial": {
-      "title": "Qaobee est gratuit pendant un mois, alors profitez-en dès à présent",
+      "title": "Le premier mois est gratuit",
       "btn": "Essayer gratuitement"
     },
     "offers": {
       "standard": {
-        "title": "Standard",
-        "price": "8",
+        "title": "Qaobee s'adresse aux entraîneurs et aux clubs (<span style=\"vertical-align: super; font-size: 50%;\">*</span>)  de handball",
+        "price": "pour 5",
         "period": "par mois",
         "desc": "L'espace de travail dont vous avez besoin pour entraîner en toute simplicité.",
         "detail": {
-          "title": "Standard comprend",
-          "sub-title": "Toutes ces fonctionnalités :",
-          "line1": "Gestion de son effectif et de ses équipes",
+          "line1": "Gérer ses joueurs et ses équipes",
           "line2": "Agenda partagé",
           "line3": "Partage de son espace de travail avec d'autres entraîneurs",
-          "line4": "Collecte de données en temps réel",
-          "line5": "Statistiques par joueur, par équipe, par match"
-        }
-      },
-      "team": {
-        "title": "Team",
-        "price": "12",
-        "period": "par utilisateur / par mois",
-        "desc": "Pour les entraîneurs qui travaillent en équipe.",
-        "detail": {
-          "title": "Team comprends",
-          "sub-title": "Tout <b>Standard</b>, et :",
-          "line1": "Partage de son espace de travail avec 5 entraîneurs",
-          "line2": "Gestion de l'effectif collaboratif",
-          "line3": "Agenda collaboratif",
-          "line4": "Entraînement collaboratif",
-          "line5": "Support"
+          "line4": "Statistiques par joueur, par équipe, par match"
         }
       }
     }
